--- a/custom-resources.hbs
+++ b/custom-resources.hbs
@@ -4,12 +4,12 @@
 
 
 <section class="content-wrap archive page-resources">
-  <div class="container">
+  <div class="projects-container">
     <!-- start post -->
     {{#post}}
-      <div class="main-content" style="width:100%;">
+      <div class="main-content" style="width:100%; padding: 10px 0">
         {{#if feature_image}}
-          <div class="featured-media" style="background-image: url({{feature_image}});">
+          <div class="post-image" style="background-image: url({{feature_image}});">
           </div>
         {{/if}}
         <h1>{{{title}}}</h1>
