--- a/custom-series-page.hbs
+++ b/custom-series-page.hbs
@@ -4,7 +4,7 @@
 {{#contentFor "series_page"}}gh-head-transparent{{/contentFor}}
 <!-- start site's main content area -->
 <section class="content-wrap archive">
-	<div class="container">
+	<div class="page-container">
 			<!-- start main post area -->
 			{{> sidebar}}
 			<div class=" main-content">
