--- a/custom-tag-archive.hbs
+++ b/custom-tag-archive.hbs
@@ -2,7 +2,7 @@
 {{! The tag above means - insert everything in this file into the {body} of the default.hbs template }}
 <!-- start site's main content area -->
 <section class="content-wrap archive">
-	<div class="container">
+	<div class="page-container">
 		<!-- start main post area -->
 		{{> sidebar}}
 		<div class=" main-content">
