--- a/post.hbs
+++ b/post.hbs
@@ -11,7 +11,7 @@
 					<h4 class="excerpt">{{excerpt}}</h4>
 					<!-- start responsive image -->
 					{{#if feature_image}}
-						<div class="featured-media">
+						<div class="post-image">
 							<picture>
 								<source media="(min-width: 600px)" loading="lazy" srcset="{{img_url feature_image size="medium"}} 1x, {{img_url feature_image size="medium_retina"}} 2x">
 								<source media="(min-width: 1200px)" loading="lazy" srcset="{{img_url feature_image size="large"}} 1x, {{img_url feature_image}} 2x">
