--- a/src/less/etc/series.less
+++ b/src/less/etc/series.less
@@ -168,7 +168,7 @@
       box-shadow: 0 0 2px #4f57a9;
     }
 
-    .featured-media {
+    .post-image {
       margin: 0;
       height: auto;
       width: auto;
