--- a/src/less/pages/tag-page.less
+++ b/src/less/pages/tag-page.less
@@ -44,7 +44,7 @@
       margin-bottom: 20px;
 
       &:hover {
-        .featured-media,
+        .post-image,
         img {
           border: unset !important;
         }
@@ -99,7 +99,7 @@
         }
       }
 
-      .featured-media {
+      .post-image {
         display: block;
         margin: 0 auto;
         background-size: cover;
