--- a/src/less/posts/postfooter.less
+++ b/src/less/posts/postfooter.less
@@ -13,7 +13,7 @@
 	width: 100%;
 	max-width: 100%;
 	border-top: 2px dotted #f3f3f3;
-border-style: dotted none none;	
+	border-style: dotted none none;	
 	@media(max-width: @tablet-breakpoint) {
 		width: 100% !important;
 		display: block;
@@ -27,7 +27,7 @@ border-style: dotted none none;
 		flex-wrap: wrap;
 		align-items: center;
 		justify-content: flex-start;
-		margin: 30px 0 0;
+		margin: 20px 0 20px;
 
 		a {
 			background: #e7eefa;
@@ -88,7 +88,7 @@ border-style: dotted none none;
 				background: #ffffff;
 				color: #dbdbdb;
 				transition: 0.2s all ease-out;
-				border: 1px solid #dbdbdb;
+				border: 1px solid #f1f1f1;
 				padding: 0;
 				margin: auto 0;
 				min-width: 18%;
@@ -182,7 +182,7 @@ border-style: dotted none none;
 
 				i {
 					margin: 0 auto;
-					color: #a3a7b2;
+					color: #bfc3ce;
 					font-size: 19px;
 					display: block;
 					width: fit-content;
