--- a/custom-apply.hbs
+++ b/custom-apply.hbs
@@ -3,13 +3,13 @@
 <!-- start site's main content area -->
 <script src="{{asset "js/apply.js"}}"></script>
 <section class="content-wrap page-apply">
-  <div class="container">
+  <div class="projects-container">
     {{#post}}
       <!-- start main area -->
       <main class="{{page-class}} main-content page">
         <h1>{{{title}}}</h1>
         {{#if feature_image}}
-          <div class="featured-media">
+          <div class="post-image">
             <picture>
               <source media="(min-width: 1200px)" srcset="{{img_url feature_image size="large"}} 1x, {{img_url feature_image size="large_retina"}} 2x">
               <img alt="{{title}}" class="lazy" src="{{img_url feature_image}}">
