--- a/series.hbs
+++ b/series.hbs
@@ -2,7 +2,7 @@
 {{! The tag above means - insert everything in this file into the {body} of the default.hbs template }}
 <!-- start site's main content area -->
 <section class="content-wrap series-template {{body_class}}">
-	<div class="container">
+	<div class="page-container">
 		<!-- end main post area -->
 		{{! insert sidebar partial}}
 		{{> sidebar}}
