--- a/src/less/author/author.less
+++ b/src/less/author/author.less
@@ -2,6 +2,12 @@
 
 .author-template {
 	.cover {
+		@media(max-width: @mobile-breakpoint) {
+			margin-left: calc(~"-50vw + 50%") !important;
+			margin-right: calc(~"-50vw + 50%") !important;
+			width: 108%;
+		}
+
 		.avatar {
 			margin: 0 !important;
 			width: 85px;
@@ -34,22 +40,21 @@
 
 	.widget {
 		order: 1;
-		
+
 		.widget-body {
 			background-color: white;
 		}
-		
+
 		&.github,
-		&.website,
-		&.medium {
-		  display: none;
+		&.medium,
+		&.website {
+			display: none;
 		}
 	}
 
 	.sidebar {
-		display: flex;
-		flex-direction: column;
-		@media (max-width: 1000px) {
+		width: 316px !important;
+		@media (max-width: 800px) {
 			display: none !important;
 		}
 
@@ -325,14 +330,6 @@
 					}
 				}
 			}
-		}
-	}
-
-	.main-content {
-		width: 67%;
-		margin: auto;
-		@media(max-width: 1000px) {
-			width: 100%;
 		}
 	}
 }
