--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -4,8 +4,6 @@
 	sidebar
 ====================================================*/
 .sidebar {
-	min-width: 300px;
-	max-width: 400px;
 
 	.tag-cloud {
 		display: flex;
@@ -46,16 +44,11 @@
 	}
 
 	.widget {
-		margin-right: 25px !important;
-		width: -webkit-fill-available;
-		width: -moz-available;
 		background: white;
 		padding: 20px;
 		box-shadow: 0 0 5px rgba(65, 67, 144, 0.15);
 		transition: all 0.3s ease-out;
 		@media(max-width: 950px) {
-			margin-right: 20px !important;
-			margin-bottom: 20px !important;
 			padding: 15px;
 		}
 
@@ -495,8 +488,7 @@
 	}
 
 	.widget {
-		margin-bottom: 30px;
-		margin-top: 0;
+		margin: 0 0 30px;
 
 		.post-title {
 			a {
