--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -38,7 +38,7 @@
 			width: 100% !important;
 		}
 
-		.featured-media {
+		.post-image {
 			line-height: 1;
 			margin: 20px 0 0;
 			@media(max-width: @tablet-breakpoint) {
@@ -67,7 +67,7 @@
 		font-weight: 600;
 		letter-spacing: 0;
 		line-height: 1.1;
-		color: @h1-color;
+		color: #354362;
 		@media(max-width: @tablet-breakpoint) {
 			margin: 10px 0;
 			font-size: 2em;
@@ -88,7 +88,7 @@
 		font-size: 1.25em;
 		margin: 10px 0 30px;
 		line-height: 1.3;
-		color: @h1-color;
+		color: #354362;
 		font-family: @header-font;
 		@media(max-width: @tablet-breakpoint) {
 			margin: 10px 0 0;
