--- a/tag.hbs
+++ b/tag.hbs
@@ -2,7 +2,7 @@
 {{! The tag above means - insert everything in this file into the {body} of the default.hbs template }}
 <!-- start site's main content area -->
 <section class="content-wrap">
-	<div class="container">
+	<div class="page-container">
 			{{! insert sidebar partial}}
 			{{> sidebar}}
 			<!-- start main post area -->
