--- a/src/less/posts/postmeta.less
+++ b/src/less/posts/postmeta.less
@@ -7,7 +7,7 @@ header {
   }
 
   .post-meta {
-    margin: 15px 0;
+    margin: 10px 0 15px;
     color: #40627b;
     font-size: 12px;
     display: flex;
@@ -30,7 +30,7 @@ header {
       font-family: @body-font;
       font-weight: 500;
     }
-    
+
     .date {
       @media(max-width: @mobile-breakpoint) {
         display: none;
