fixed code snippet full screen

--- a/src/less/global/footer.less
+++ b/src/less/global/footer.less
@@ -85,6 +85,7 @@
 			width: -webkit-fill-available;
 			margin: 10px 0 30px;
 			width: 22%;
+			margin-top: 20px;
 
 			&:last-child {
 				margin-bottom: 0;
