--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -19,7 +19,7 @@
 		max-width: 790px;
 		@media(max-width: @tablet-breakpoint) {
 			width: 90%;
-			margin: 0 auto;
+			margin: 0 auto 20px;
 		}
 		@media(max-width: @mobile-breakpoint) {
 			width: 85%;
@@ -278,7 +278,7 @@
 						}
 					}
 				}
-				
+
 				/*   Start of Protip box */
 				.protip {
 					background: rgba(255, 222, 196, 0.42);
