--- a/src/less/posts/postfooter.less
+++ b/src/less/posts/postfooter.less
@@ -113,7 +113,7 @@
 					width: fit-content;
 					margin: 0 auto;
 					@media(max-width: @tablet-breakpoint) {
-						padding: 3px 0 !important;
+						padding: 0 !important;
 						height: fit-content;
 						border: 0;
 					}
@@ -341,7 +341,7 @@ section .widget.newsletter {
 .after-post {
 	max-width: 830px !important;
 	margin-top: 30px;
-	@media(max-width: 900px) {
+	@media(max-width: @tablet-breakpoint) {
 		margin-top: 20px;
 		width: 93%;
 		max-width: unset;
