--- a/src/less/global/variables.less
+++ b/src/less/global/variables.less
@@ -13,7 +13,7 @@
 @bg-color-light: #e0ecef;			// Light background color
 @bg-color-footer: #202020;			// Footer background color
 @bg-color-footer-dark: #111111;		// Footer dark background color
-@text-color: #2d2f35;				// Main text color
+@text-color: #373940;				// Main text color
 @meta-color: #373b46;				// Main text color
 @text-color-heading: #153b52;   // Heading text color
 @text-color-footer: #b4b4b4;
