--- a/src/less/posts/about-author.less
+++ b/src/less/posts/about-author.less
@@ -1,6 +1,6 @@
 .about-author {
   background: white;
-  padding: 40px 60px;
+  padding: 40px;
   min-height: 85px;
   box-shadow: 0 0 5px rgba(80,82,204,.1)!important;
   width: fit-content;
