--- a/src/less/posts/languages/default.less
+++ b/src/less/posts/languages/default.less
@@ -31,7 +31,7 @@
     position: absolute;
     width: 100%;
     height: auto;
-    padding: 6px 25px 3px;
+    padding: 8px 17px 5px;
     margin-bottom: 10px;
     top: 0;
     left: 0;
@@ -40,7 +40,7 @@
     font-style: normal;
     font-variant: normal;
     text-rendering: auto;
-    text-shadow: -2px 2px 1px rgba(0, 9, 46, 0.5);
+    text-shadow: -1px 1px 0 rgba(0, 9, 46, 0.5);
     content: "Code Snippet";
     background: rgba(40, 48, 104, 0.4);
     letter-spacing: 1px;
