fixed post margins

--- a/src/less/global/author-card.less
+++ b/src/less/global/author-card.less
@@ -100,7 +100,7 @@
     font-size: 0.85em !important;
     margin: 0 auto !important;
     max-width: 450px;
-    padding: 0 25px 30px;
+    padding: 0 25px 10px;
     text-align: center;
     text-align: left;
     min-height: 70px;
@@ -120,6 +120,7 @@
   }
 
   .author-social {
+    display: none;
     .author-icons {
       list-style: none;
       display: flex;
