--- a/src/less/global/footer.less
+++ b/src/less/global/footer.less
@@ -28,6 +28,9 @@
 	@media(max-width: 1000px) {
 		padding: 30px 40px;
 	}
+	@media(max-width: 800px) {
+		padding: 20px 40px;
+	}
 	@media(max-width: @mobile-breakpoint) {
 		margin-top: 10px;
 		display: block;
@@ -227,7 +230,7 @@
 
 .copyright {
 	width: 100%;
-	background: #0b1622;
+	background: #0d1527;
 	text-align: center;
 	color: white;
 	font-size: 0.85em;
