--- a/src/less/posts/code.less
+++ b/src/less/posts/code.less
@@ -85,7 +85,7 @@ blockquote pre {
     font-size: 30px;
     width: fit-content;
     height: fit-content;
-    color: #6c8699;
+    color: #9bc3e1;
     cursor: pointer;
     transition: all 0.3s ease-out;
     display: none;
