--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -19,7 +19,7 @@
 		max-width: 790px;
 		@media(max-width: @tablet-breakpoint) {
 			width: 90%;
-			margin: 0 auto 20px;
+			margin: 10px auto 20px;
 		}
 		@media(max-width: @mobile-breakpoint) {
 			width: 85%;
@@ -73,26 +73,26 @@
 			@media(max-width: @mobile-breakpoint) {
 				font-size: 1.65em;
 				max-width: auto;
-				margin: 10px 0 15px;
+				margin: 10px 0 5px;
 				letter-spacing: 0;
 				line-height: 1.1;
 				color: @h1-color;
-				text-align: center;
 			}
 		}
 
 		.excerpt {
 			font-weight: 600;
 			font-size: 1.25em;
-			margin: 10px 0 30px;
+			margin: 5px 0 30px;
 			line-height: 1.3;
 			color: #354362;
 			font-family: @header-font;
 			@media(max-width: @tablet-breakpoint) {
-				margin: 10px 0 0;
+				margin: 0;
+				font-size: 1.15em;
 			}
 			@media(max-width: @mobile-breakpoint) {
-				display: none;
+				font-size: 1.05em;
 			}
 		}
 
