--- a/src/less/author.less
+++ b/src/less/author.less
@@ -6,4 +6,8 @@
 @import 'pages/page.less';
 @import 'author/author.less';
 @import 'author/githubcard.less';
+@import 'author/medium.less';
+@import 'author/meetup.less';
+@import 'author/website.less';
+@import 'author/rss.less';
 @import 'pages/cover.less';
