--- a/src/less/global/author-card.less
+++ b/src/less/global/author-card.less
@@ -168,6 +168,9 @@
       @media (max-width: 1040px) {
         margin: 0 auto 3px;
       }
+      @media(max-width: @mobile-breakpoint) {
+        margin: 0 auto 3px;
+      }
 
       i {
         margin-right: 7px;
