--- a/src/less/global/pagination.less
+++ b/src/less/global/pagination.less
@@ -50,8 +50,9 @@
 		display: inline-block;
 		color: #828994;
 		background: none;
-		border-radius: 2px;
-		padding: 8px 14px;
+		border-radius: 1px;
+		padding: 8px 13px;
+		height: 14px;
 		line-height: 1;
 		font-size: 1em;
 		font-weight: 700;
@@ -73,10 +74,9 @@
 	}
 
 	strong {
-		border: 1px solid #6e89b5 !important;
 		color: #6e89b5 !important;
-		background: rgba(199, 210, 240, 0.19);
-		border-radius: 2px;
+		background: rgba(199, 210, 240, 0.5);
+    border-radius: 1px;
 		transition: all 0.2s ease-out;
 
 		&:hover {
