--- a/src/less/global/search.less
+++ b/src/less/global/search.less
@@ -53,7 +53,7 @@ nav {
     box-shadow: 0 0 50px #7a84b5;
     position: relative;
     max-width: 350px;
-    @media(max-width: @mobile-breakpoint) {
+    @media(max-width: @tablet-breakpoint) {
       visibility: hidden;
     }
 
