--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -40,7 +40,7 @@
 
 		.post-image {
 			line-height: 1;
-			margin: 20px 0 0;
+			margin: 25px 0 0;
 			@media(max-width: @tablet-breakpoint) {
 				margin: 20px 0 0;
 			}
@@ -82,9 +82,9 @@
 
 		.excerpt {
 			font-weight: 600;
-			font-size: 1.25em;
+			font-size: 1.2em;
 			margin: 5px 0 30px;
-			line-height: 1.3;
+			line-height: 1.2;
 			color: #354362;
 			font-family: @header-font;
 			@media(max-width: @tablet-breakpoint) {
@@ -92,7 +92,7 @@
 				font-size: 1.15em;
 			}
 			@media(max-width: @mobile-breakpoint) {
-				font-size: 1.05em;
+				font-size: 1em;
 			}
 		}
 
@@ -119,7 +119,7 @@
 				position: relative;
 
 				h2 {
-					margin: 40px 0 10px;
+					margin: 40px 0 5px;
 					color: #555560;
 					line-height: 1.3;
 					font-family: @body-font;
@@ -144,7 +144,7 @@
 					font-size: 1.3em;
 					line-height: 1.2;
 					color: #555560;
-					margin: 40px 0 10px;
+					margin: 40px 0 5px;
 					font-family: @body-font-bold;
 					font-weight: 300;
 					@media(max-width: @tablet-breakpoint) {
@@ -171,7 +171,7 @@
 					font-family: @body-font;
 					-webkit-font-smoothing: auto;
 					@media(max-width: @mobile-breakpoint) {
-						font-size: 1em;
+						font-size: .9em;
 					}
 				}
 
@@ -195,7 +195,7 @@
 
 				p {
 					margin: 0 0 25px;
-					font-size: 1.05em;
+					font-size: 1em;
 					line-height: 1.8em;
 					@media (max-width: 600px) {
 						text-align: left;
@@ -479,7 +479,7 @@
 			figure {
 				width: 99%;
 				max-width: 99%;
-				margin: 40px auto;
+				margin: 30px auto;
 				overflow: visible;
 				box-shadow: 1px 0 1px rgba(154, 154, 165, 0.27);
 				border: 1px solid rgba(206, 206, 206, 0.42);
