--- a/src/less/posts/postmeta.less
+++ b/src/less/posts/postmeta.less
@@ -7,7 +7,7 @@ header {
   }
 
   .post-meta {
-    margin: 10px 0 15px;
+    margin: 5px 0 15px;
     color: @text-color;
     font-size: 12px;
     display: flex;
@@ -39,15 +39,14 @@ header {
     }
 
     .tags {
-      height: 33px !important;
-      padding: 8px 10px;
+      height: 30px !important;
+      padding: 10px 8px;
       border-radius: 2px;
       @media(max-width: @mobile-breakpoint) {
-        height: 33px !important;
-        padding: 6px 8px;
+        height: 30px !important;
+        padding: 10px 8px;
       }
       @media(max-width: 500px) {
-        height: 24px;
 
         i {
           font-weight: 500;
@@ -62,7 +61,7 @@ header {
       span {
         font-size: 1em;
         font-family: @body-font-bold;
-        @media(max-width: @mobile-breakpoint) {
+        @media(max-width: @tablet-breakpoint) {
           font-size: 0.9em;
         }
       }
@@ -112,8 +111,8 @@ header {
     * {
       font-size: 1em;
       padding: 0;
-      @media(max-width: @mobile-breakpoint) {
-        font-size: 0.95em;
+      @media(max-width: @tablet-breakpoint) {
+        font-size: 0.9em;
       }
     }
 
