--- a/partials/author/about-author.hbs
+++ b/partials/author/about-author.hbs
@@ -17,14 +17,12 @@
 				{{/if}}
 				{{#if website}}
 					<span class="website"><a href="{{website}}" targer="_BLANK"><i class="fal fa-globe"></i><span class="copy">{{t "Website"}}</a></span></span>
-				{{else}}
-					<span class="website"><a href="{{@site.url}}/author/{{slug}}" targer="_BLANK"><i class="fal fa-globe"></i><span class="copy">{{t "Website"}}</a></span></span>
 				{{/if}}
 				{{#if twitter}}
 					<span class="twitter"><a href="{{twitter_url}}"><i class="fab fa-twitter"></i><span class="copy">{{twitter}}</a></span></span>
 				{{/if}}
 				{{#if facebook}}
-					<span class="facebook"><a href="{{facebook_url}}"><i class="fab fa-facebook"></i></a></span>
+					<span class="facebook"><a href="{{facebook_url}}"><i class="fab fa-facebook"></i>{{facebook}}</a></span>
 				{{/if}}
 			</div>
 			{{#if bio}}
