--- a/partials/author/cover-author.hbs
+++ b/partials/author/cover-author.hbs
@@ -7,18 +7,18 @@
 		{{name}}
 	</h3>
 	<div class="meta-info">
-		<span class="post-count"><i class="fal fa-pencil"></i>{{#get "posts" limit="all" filter="authors:{{slug}}"}}{{plural posts.length empty=(t "0 Posts") singular=(t "% Post") plural=(t "% Posts")}}{{/get}}</span>
+		<span class="meta-item post-count"><i class="fal fa-pencil"></i>{{#get "posts" limit="all" filter="authors:{{slug}}"}}{{plural posts.length empty=(t "0 Posts") singular=(t "% Post") plural=(t "% Posts")}}{{/get}}</span>
 		{{#if location}}
-			<span class="location"><i class="fal fa-map-marker-alt"></i>{{location}}</span>
+			<span class="meta-item location"><i class="fal fa-map-marker-alt"></i>{{location}}</span>
 		{{/if}}
 		{{#if website}}
-			<span class="website"><a href="{{website}}" target="_BLANK"><i class="fal fa-globe"></i> {{t "Website"}}</a></span>
+			<span class="meta-item website"><a href="{{website}}" target="_BLANK"><i class="fal fa-globe"></i> {{t "Website"}}</a></span>
 		{{/if}}
 		{{#if twitter}}
-			<span class="twitter"><a href="{{twitter_url}}" target="_BLANK"><i class="fab fa-twitter"></i> {{twitter}}</a></span>
+			<span class="meta-item twitter"><a href="{{twitter_url}}" target="_BLANK"><i class="fab fa-twitter"></i> {{twitter}}</a></span>
 		{{/if}}
 		{{#if facebook}}
-			<span class="facebook"><a href="{{facebook_url}}" target="_BLANK"><i class="fa fa-facebook"></i></a></span>
+			<span class="meta-item facebook"><a href="{{facebook_url}}" target="_BLANK"><i class="fa fa-facebook"></i> {{facebook}}</a></span>
 		{{/if}}
 	</div>
 	{{#if bio}}
