--- a/partials/author/widget-rss.hbs
+++ b/partials/author/widget-rss.hbs
@@ -1,5 +1,5 @@
 <!-- Start RSS Widget -->
-<div class="widget" style="0">
+<div class="widget rss">
   <h4 class="title">Personal RSS</h4>
   <script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" data-fw-param="78860/"></script>
 </div>
