--- a/partials/cover-tag.hbs
+++ b/partials/cover-tag.hbs
@@ -1,6 +1,4 @@
 <!-- Start Tag Cover -->
-{{#is 'tag'}}
-	{{! Series Page with background image}}
 	{{#tag}}
 		{{#if feature_image}}
 			<div class="cover tag-cover series-cover lazy" style="background-image: url({{img_url feature_image absolute="true"}});">
@@ -33,76 +31,8 @@
 			</div>
 			{{/if}}
 	{{/tag}}
-	{{! End tag widget}}
-{{/is}}
-{{#is 'author'}}
-	<div class="author-card-small {{slug}}">
-		{{#if cover_image}}
-			<div class="author-cover" style="background:url({{cover_image}})">
-			</div>
-		{{else}}
-			<div class="author-cover">
-			</div>
-		{{/if}}
-		<div class="author-specs">
-			{{#if profile_image}}
-				<a href="{{url}}" class="avatar-link"><img src="{{img_url profile_image}}" alt="{{name}}'s' avatar" class="avatar"></a>
-			{{else}}
-				<a href="{{url}}" class="avatar-link"><img src="{{asset "default-user-image.jpg"}}" alt="{{name}}'s' avatar" class="avatar"></a>
-			{{/if}}
-			<div class="details">
-				<div class="author">
-					<a href="{{url}}">{{name}}</a>
-				</div>
-				<div class="meta-info">
-					<span class="title"></span>
-					<span class="post-count"><i class="fal fa-pencil"></i><a href="{{url}}">{{plural count.posts empty=(t "0 Posts") singular=(t "% Post") plural=(t "% Posts")}}</a></span>
-					{{#if location}}
-						<span class="location"><i class="fal fa-home"></i>{{location}}</span>
-					{{/if}}
-					{{#if website}}
-						<span class="website"><i class="fal fa-globe"></i><a href="{{website}}" targer="_BLANK">{{website}}</a></span>
-					{{/if}}
-				</div>
-			</div>
-		</div>
 
-		{{#if bio}}
-			<p class="bio">
-				{{bio}}
-			</p>
-		{{/if}}
-		<div class="author-social">
-			<ul class="author-icons">
-				<!-- twitter -->
-				<li class="btn twitter">
-					<a><i class="fab fa-twitter"></i></a>
-				</li>
-				<!-- facebook -->
-				<li class="btn facebook">
-					<a><i class="fab fa-facebook"></i></a>
-				</li>
-				<!-- linkedin -->
-				<li class="btn linkedin">
-					<a><i class="fab fa-linkedin"></i></a>
-				</li>
-				<li class="btn medium">
-					<a><i class="fab fa-medium"></i></a>
-				</li>
-				<li class="btn quora">
-					<a><i class="fab fa-quora"></i></a>
-				</li>
-				<li class="btn github">
-					<a><i class="fab fa-github"></i></a>
-				</li>
-				<li class="btn pocket">
-					<a><i class="fab fa-get-pocket"></i></a>
-				</li>
-			</ul>
-		</div>
-	</div>
-
-	<script>
+	{{!--<script>
 		function PopulateAuthorDetails(users) {
 			for (var i = 0; i < users.length; i++) {
 				var user = users[i];
@@ -110,11 +40,6 @@
 
 				if (user.title) {
 					$("." + author).find('.title').html(user['title'].toString());
-				}
-
-				if (user.facebook) {
-					$("." + author).find('.facebook').children().attr('href', 'https://facebook.com/' + user['facebook'].toString());
-					$("." + author).find('.facebook').css('display', 'block');
 				}
 
 				if (user.linkedin) {
@@ -163,6 +88,5 @@
 			});
 		}
 		AuthorDetails();
-	</script>
-{{/is}}
+	</script>--}}
 <!-- End Tag Cover -->
