--- a/partials/widgets/widget-author.hbs
+++ b/partials/widgets/widget-author.hbs
@@ -20,7 +20,7 @@
           <span class="website"><a href="{{website}}" targer="_BLANK"><i class="fal fa-globe"></i>{{t "Website"}}</a></span>
         {{/if}}
         {{#if twitter}}
-          <span class="twitter"><a href="{{twitter_url}}"><i class="fab fa-twitter"></i>{{twitter}}</a></span>
+          <span class="twitter"><a href="{{twitter_url}}"><i class="fab fa-twitter"></i>{{twitter_url}}</a></span>
         {{/if}}
         {{#if facebook}}
           <span class="facebook"><a href="{{facebook_url}}"><i class="fab fa-facebook"></i></a></span>
