--- a/src/less/author/author.less
+++ b/src/less/author/author.less
@@ -32,9 +32,14 @@
 			margin: 15px auto 0;
 			font-weight: 300;
 			@media(max-width: @mobile-breakpoint) {
-				max-width: 90%;
-				margin: 10px auto 0;
+				max-width: 80%;
+				margin: 15px auto 0;
 			}
+		}
+
+		.meta-item {
+			line-height: 1.3;
+			margin: 0 auto 3px;
 		}
 	}
 
@@ -58,69 +63,6 @@
 			display: none !important;
 		}
 
-		.author-website,
-		.website {
-			content {
-				overflow: hidden;
-				padding: 0;
-			}
-
-			& > a {
-				display: block;
-				overflow: hidden;
-				border: 1px solid mix(@theme-color, #e1e1e1, 20%);
-				margin: 5px 0 0;
-			}
-
-			.link-preview {
-				height: 167px;
-				background-size: cover !important;
-				color: white;
-				position: relative;
-				margin: 0;
-				border: 0;
-				border-radius: 0;
-
-				h4 {
-					position: absolute;
-					bottom: 12px;
-					left: 15px;
-					color: white;
-					z-index: 10;
-					width: 79%;
-					line-height: 1;
-					overflow: hidden;
-					text-overflow: ellipsis;
-					display: block;
-					white-space: nowrap;
-					font-size: 15px;
-					font-family: @body-font;
-					margin: 0;
-				}
-
-				a {}
-
-				i {
-					position: absolute;
-					right: 12px;
-					bottom: 12px;
-					z-index: 100;
-					font-size: 14px;
-					color: white;
-				}
-
-				&::after {
-					display: block;
-					position: absolute;
-					background-image: linear-gradient(to bottom, transparent 0%, @theme-color 100%);
-					height: 100%;
-					width: 105%;
-					top: 0;
-					left: 0;
-					content: '';
-				}
-			}
-		}
 
 		.github {
 			order: 1;
@@ -134,202 +76,6 @@
 			order: 20;
 		}
 
-		#medium {
-			background: white;
-			padding: 20px 30px;
 
-			.medium-widget-article__grid {
-				border-bottom: 1px solid #e5e5e5;
-				padding-bottom: 20px;
-
-				&:last-of-type {
-					border-bottom: 0;
-				}
-			}
-
-			.title {
-				margin: 0 0 0 -9px;
-			}
-
-			.medium-widget-article__item {
-				font-size: 14px;
-				padding: 15px 5px;
-			}
-
-			.medium-widget-article__description {
-				display: none;
-			}
-
-			.medium-widget-article__title {
-				font-family: @header-font-bold;
-				color: @text-color-heading;
-				font-size: 1.2em;
-				line-height: 1.2;
-			}
-
-			.medium-widget-article__image img {
-				width: 100px;
-			}
-		}
-
-		.meetup {
-			order: 2;
-			padding: 0 12px;
-
-			.widget-body {
-				padding: 15px 10px;
-			}
-
-			.noevents {
-				text-align: center;
-				padding: 20px;
-				display: block;
-				color: #6f6f6f;
-				font-size: 16px;
-				font-style: italic;
-				margin-bottom: 30px;
-			}
-
-			.userprofile {
-				padding: 0 10px 10px;
-				margin-bottom: 10px;
-				/*border-bottom: 1px solid #e8e8e8;*/
-				.avatar {
-					display: inline-block;
-					margin-right: 15px;
-					height: 70px;
-				}
-
-				.info {
-					display: inline-block;
-
-					.name {
-						font-size: 1.2em;
-						font-family: @body-font;
-					}
-
-					.country,
-					.location {
-						display: block;
-						font-size: 0.9em;
-						line-height: 1.5;
-					}
-				}
-
-				.events {
-					.event {
-						background: #fafafa;
-						padding: 15px;
-						margin-bottom: 10px;
-						transition: all 0.2s ease-out;
-
-						&:hover {
-							background: #d5f0f3;
-
-							span {
-								color: white;
-							}
-						}
-
-						.eventheader {
-							display: flex;
-							justify-content: space-between;
-							margin-bottom: 15px;
-
-							.eventimg {
-								display: inline-block;
-								margin-right: 15px;
-								width: 60px;
-								height: 60px;
-								min-width: 60px;
-								background-size: cover;
-								background-position: center;
-								border-radius: 2px;
-							}
-
-							time {
-								display: flex;
-								-webkit-box-orient: vertical;
-								flex-direction: column;
-								text-align: center;
-								background: #f6f7f8;
-								border: 1px solid rgba(46,62,72,.12);
-								border-radius: 8px;
-								padding: 8px;
-								min-width: 36px;
-								min-height: 36px;
-								height: 38px;
-								margin-right: 15px;
-								transition: all 0.2s ease-out;
-
-								&:hover {
-									background: #797979;
-
-									.day,
-									.month {
-										color: white;
-									}
-								}
-
-								.day {
-									color: #f13a59;
-									font-size: 20px;
-									line-height: 1.1;
-									font-weight: 600;
-									display: block;
-									width: 100%;
-									height: 15px;
-									margin-bottom: 5px;
-									text-transform: uppercase;
-								}
-
-								.month {
-									color: rgba(46,62,72,.6);
-									font-weight: 500;
-									text-transform: uppercase;
-									display: block;
-									text-align: center;
-									line-height: 1.1;
-									width: 100%;
-									height: 14px;
-									font-family: @body-font;
-									margin-top: 3px;
-								}
-							}
-
-							.eventname {
-								font-size: 16px;
-								color: #505050;
-								display: inline-block!important;
-								line-height: 1.4;
-								padding-top: 5px;
-								font-family: @body-font;
-							}
-						}
-
-						.eventinfo {
-							display: inline-block;
-							overflow: hidden;
-							width: 100%;
-
-							i {
-								margin-right: 5px;
-							}
-
-							span {
-								white-space: nowrap;
-								overflow: hidden;
-								text-overflow: ellipsis;
-								width: 257px;
-								display: block;
-								color: #505050;
-								margin: 0 0 5px 10px;
-								line-height: 1.5;
-							}
-						}
-					}
-				}
-			}
-		}
 	}
 }
