--- a/src/less/posts/galleries.less
+++ b/src/less/posts/galleries.less
@@ -53,8 +53,9 @@
     width: 85vw;
     min-width: 100%;
     margin: auto calc(50% - 50vw);
-    transform: translateX(calc(50vw - 50%));
-    border: 0;
+    /*transform: translateX(calc(50vw - 50%));*/
+    border: 0 !important;
+    box-shadow: 0 !important;
   }
 
   .kg-width-full {
