--- a/partials/posts/article-preview.hbs
+++ b/partials/posts/article-preview.hbs
@@ -5,11 +5,9 @@
     <div class="description">
       <h5 class="related-title">{{title}}</h5>
       {{#primary_author}}
-        {{#if profile_image}}
-          <a href="{{url}}" class="author-mobile"><img src="{{img_url feature_image absolute="true"}}{{img_url profile_image absolute="true"}}" alt="{{name}}'s avatar" class="avi">
+          <a href="{{url}}" class="author-mobile">{{#if profile_image}}<img src="{{img_url feature_image absolute="true"}}{{img_url profile_image absolute="true"}}" alt="{{name}}'s avatar" class="avi">{{/if}}
             <div class="info"><span class="mobile-name">{{slug}}</span><span class="mobile-date">{{date format="MMMM DD"}}</span></div>
           </a>
-        {{/if}}
       {{/primary_author}}
     </div>
   </a>
