--- a/partials/posts/relatedposts.hbs
+++ b/partials/posts/relatedposts.hbs
@@ -1,6 +1,6 @@
 <!-- Start Related Posts -->
 <div class="related">
-	{{#get "posts" limit="3" filter="tag:{{primary_tag.slug}}+slug:-{{slug}}" include="tags,authors" as |related|}}
+	{{#get "posts" limit="3" filter="id:-{{id}}+tag:{{primary_tag.slug}}" include="tags,authors" as |related|}}
 		{{#foreach related}}
 				<p>ayyy lmao</p>
 				{{> article-preview}}
