--- a/src/less/projects/kanban.less
+++ b/src/less/projects/kanban.less
@@ -269,14 +269,14 @@
         margin-bottom: 0;
       }
 
-      h2 {
+      .column-title {
         margin-top: 0 !important;
         font-size: 1.38em;
-        margin: 0 auto 20px !important;
+        margin: 0 auto 10px !important;
         padding-bottom: 0;
         position: relative;
         width: 89%;
-        font-family: @body-font !important;
+        font-family: @body-font-bold !important;
         font-weight: 400;
       }
 
@@ -310,7 +310,7 @@
             margin-bottom: 0;
           }
 
-          h5 {
+          .card-title {
             font-size: 0.9em;
             line-height: 1.2;
             text-transform: capitalize;
@@ -318,61 +318,6 @@
             color: #3c3d46;
             margin: 2px 0 20px;
             width: 97%;
-          }
-
-          p {
-            line-height: 1.3;
-            font-size: 0.9em;
-            margin: 10px 0 15px;
-            width: auto;
-            overflow: hidden;
-          }
-
-          .issuetype {
-            position: absolute;
-            background: #0db0e2;
-            color: #fff;
-            text-align: center;
-            top: -19px;
-            right: -36px;
-            width: 80px;
-            height: 40px;
-            line-height: 54px;
-            transform: rotate(45deg);
-
-            img {
-              width: 15px;
-              height: 15px;
-              transform: rotate(-45deg);
-              top: 21px;
-              position: absolute;
-              right: 31px;
-            }
-
-            &.Subtask,
-            &.Task {
-              background-color: #b8d8f1;
-            }
-
-            &.Story {
-              background-color: #b6d49c;
-            }
-
-            &.Content {
-              background-color: purple;
-            }
-
-            &.Integration {
-              background-color: #F28B8B;
-            }
-
-            &.Idea {
-              background-color: orange;
-            }
-
-            &.Bug {
-              background-color: #F28B8B;
-            }
           }
 
           .info {
@@ -384,7 +329,7 @@
               justify-content: space-between;
               width: 60px;
 
-              .avatar,
+              .issuetype,
               .priority {
                 width: 20px !important;
                 height: 20px !important;
@@ -439,7 +384,7 @@
                 opacity: 0.7;
               }
 
-              span {
+              .epic-title {
                 color: #242d3e;
                 font-size: 11px;
                 font-family: @body-font !important;
