--- a/partials/projects/projects-kanban.hbs
+++ b/partials/projects/projects-kanban.hbs
@@ -4,7 +4,7 @@
     <div class="column swiper-slide b">
       <div id="backlog">
         <div class="column-head">
-          <h2>Backlog</h2>
+          <h4 class="column-title">Backlog</h4>
           <span class="count"></span>
         </div>
         <div class="cards"></div>
@@ -13,7 +13,7 @@
     <div class="column swiper-slide t">
       <div id="todo">
         <div class="column-head">
-          <h2>To Do</h2>
+          <h4 class="column-title">To Do</h4>
           <span class="count"></span>
         </div>
         <div class="cards"></div>
@@ -22,7 +22,7 @@
     <div class="column swiper-slide p">
       <div id="progress">
         <div class="column-head">
-          <h2>In Progress</h2>
+          <h4 class="column-title">In Progress</h4>
           <span class="count"></span>
         </div>
         <div class="cards"></div>
@@ -31,7 +31,7 @@
     <div class="column swiper-slide d">
       <div id="done">
         <div class="column-head">
-          <h2>Done</h2>
+          <h4 class="column-title">Done</h4>
           <span class="count"></span>
         </div>
         <div class="cards"></div>
