mongodb getting close

--- a/partials/projects/projects-kanban.hbs
+++ b/partials/projects/projects-kanban.hbs
@@ -2,7 +2,7 @@
 <div>
   <div id="kanban">
     <div class="column swiper-slide b">
-      <div id="backlog">
+      <div id="Backlog">
         <div class="column-head">
           <h4 class="column-title">Backlog</h4>
           <span class="count"></span>
@@ -11,7 +11,7 @@
       </div>
     </div>
     <div class="column swiper-slide t">
-      <div id="todo">
+      <div id="ToDo">
         <div class="column-head">
           <h4 class="column-title">To Do</h4>
           <span class="count"></span>
@@ -20,7 +20,7 @@
       </div>
     </div>
     <div class="column swiper-slide p">
-      <div id="progress">
+      <div id="InProgress">
         <div class="column-head">
           <h4 class="column-title">In Progress</h4>
           <span class="count"></span>
@@ -29,7 +29,7 @@
       </div>
     </div>
     <div class="column swiper-slide d">
-      <div id="done">
+      <div id="Done">
         <div class="column-head">
           <h4 class="column-title">Done</h4>
           <span class="count"></span>
