--- a/partials/projects/projects-dropdown.hbs
+++ b/partials/projects/projects-dropdown.hbs
@@ -1,7 +1,8 @@
 <div class="projectdropdown">
-    <div class="dropdown">
+    <div class="projects-dropdown">
         <ul>
-            <li class="picker"><span>Select a Project</span><i class="fas fa-caret-down"></i>
+            <li class="picker">
+              <span class="make-selection">Select a Project</span><i class="fas fa-caret-down dropdown-arrow"></i>
                 <ul class="dropdown-list">
                   <li class="stockholmproject">
                       <svg style="fill:#8d9ab7;" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
