post series widget fix attempt

--- a/src/less/pages/cover.less
+++ b/src/less/pages/cover.less
@@ -1,6 +1,6 @@
 @import "../global/variables.less";
 /*====================================================
-	Tag page & author page cover
+	Tag page & author page cover base styles
 ====================================================*/
 .cover {
 	text-align: center;
