--- a/author.hbs
+++ b/author.hbs
@@ -21,7 +21,7 @@
 	<script src="{{asset "js/includes/gh-profile-card.min.js"}}"></script>
 	<script async src="{{asset "js/author.js"}}"></script>
 	<script src="https://medium-widget.pixelpoint.io/widget.js"></script>
-	<script src="{{asset "js/previews.js"}}"></script>
+	<!--<script src="{{asset "js/previews.js"}}"></script>-->
 {{/contentFor}}
 
 <!-- end sites main content area -->
