--- a/src/less/posts/about-author.less
+++ b/src/less/posts/about-author.less
@@ -23,7 +23,7 @@
     overflow: hidden;
     margin-right: 30px;
     border-radius: 2px;
-    border: 1px solid rgba(40, 98, 190, 0.5);
+    border: 1px solid rgba(150, 168, 198, 0.5);
     @media(max-width: @tablet-breakpoint) {
       margin-right: 20px;
     }
@@ -35,6 +35,7 @@
 
     img {
       width: 100%;
+      height: auto;
     }
   }
 
