fixed series widget

--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -1,12 +1,11 @@
 #seriesposts {
   margin: 0 0 30px;
-  padding: 20px 20px 10px;
-  display: none;
-  position: relative;
-  overflow: hidden;
-  background: #eceff3;
-  border-radius: 3px;
-  box-shadow: -1px 1px 0 #d7e2e4;
+    padding: 20px 10px 10px;
+    display: none;
+    position: relative;
+    overflow: hidden;
+    border-top: 1px solid #dae9ed;
+    border-bottom: 1px solid #dae9ed;
   @media(max-width: @tablet-breakpoint) {
     margin: 0 0 30px;
     padding: 20px 10px 10px;
@@ -45,7 +44,6 @@
     margin-top: 0;
     margin-bottom: 10px;
     margin-left: 0;
-    padding-left: 10px;
     @media(max-width: @mobile-breakpoint) {
       margin: 15px auto 10px;
       max-width: 90%;
