fixed series widget

--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -44,6 +44,7 @@
     margin-top: 0;
     margin-bottom: 10px;
     margin-left: 0;
+    padding-left: 0;
     @media(max-width: @mobile-breakpoint) {
       margin: 15px auto 10px;
       max-width: 90%;
