fixed next/prev styles on hover

--- a/src/less/posts/nextprev.less
+++ b/src/less/posts/nextprev.less
@@ -13,6 +13,13 @@
       width: auto !important;
     }
 
+    &:hover{
+      .prev-excerpt,
+      .next-excerpt {
+        color: white !important;
+      }
+    }
+
     .nextprev {
       display: flex;
       flex-direction: row;
@@ -46,7 +53,7 @@
 
           .prev-excerpt {
             transition: all 0.3s ease-out;
-            color: #5D6178 !important;
+            color: #5D6178;
           }
         }
       }
@@ -75,7 +82,7 @@
 
           .next-excerpt {
             transition: all 0.3s ease-out;
-            color: #5D6178 !important;
+            color: #5D6178;
           }
         }
       }
