--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -1,6 +1,6 @@
 #seriesposts {
   margin: 0 0 30px;
-    padding: 20px 10px 10px;
+    padding: 20px 0 10px;
     display: none;
     position: relative;
     overflow: hidden;
@@ -44,7 +44,7 @@
     margin-top: 0;
     margin-bottom: 10px;
     margin-left: 0;
-    padding-left: 0;
+    padding-left: 5px;
     @media(max-width: @mobile-breakpoint) {
       margin: 15px auto 10px;
       max-width: 90%;
@@ -57,7 +57,7 @@
       color: #597d87;
       font-family: @body-font;
       font-size: 0.85em;
-      padding-left: 8px;
+      padding-left: 0;
       line-height: 1;
       display: flex;
       justify-content: flex-start;
